--- a/App/ui_main.ui
+++ b/App/ui_main.ui
@@ -110,20 +110,39 @@ border-radius:7px;</string>
          </property>
          <layout class="QHBoxLayout" name="horizontalLayout">
           <property name="spacing">
-           <number>0</number>
+           <number>10</number>
           </property>
           <property name="leftMargin">
-           <number>0</number>
+           <number>5</number>
           </property>
           <property name="topMargin">
            <number>0</number>
           </property>
-          <property name="rightMargin">
-           <number>0</number>
-          </property>
-          <property name="bottomMargin">
-           <number>0</number>
-          </property>
+          <item>
+           <widget class="QLabel" name="label_logo">
+            <property name="maximumSize">
+             <size>
+              <width>60</width>
+              <height>16777215</height>
+             </size>
+            </property>
+            <property name="layoutDirection">
+             <enum>Qt::LeftToRight</enum>
+            </property>
+            <property name="styleSheet">
+             <string notr="true">image: url(&quot;icon.png&quot;);</string>
+            </property>
+            <property name="frameShape">
+             <enum>QFrame::NoFrame</enum>
+            </property>
+            <property name="text">
+             <string/>
+            </property>
+            <property name="alignment">
+             <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+            </property>
+           </widget>
+          </item>
           <item>
            <widget class="QFrame" name="frame_title">
             <property name="styleSheet">
@@ -136,29 +155,65 @@ border-radius:7px;</string>
              <enum>QFrame::Raised</enum>
             </property>
             <layout class="QHBoxLayout" name="horizontalLayout_7">
-             <property name="leftMargin">
-              <number>20</number>
-             </property>
-             <property name="topMargin">
+             <property name="spacing">
               <number>9</number>
              </property>
+             <property name="leftMargin">
+              <number>0</number>
+             </property>
+             <property name="topMargin">
+              <number>0</number>
+             </property>
+             <property name="rightMargin">
+              <number>0</number>
+             </property>
+             <property name="bottomMargin">
+              <number>0</number>
+             </property>
              <item>
-              <widget class="QLabel" name="label_title">
-               <property name="minimumSize">
-                <size>
-                 <width>0</width>
-                 <height>0</height>
-                </size>
+              <widget class="QFrame" name="frame_intro">
+               <property name="layoutDirection">
+                <enum>Qt::LeftToRight</enum>
                </property>
-               <property name="font">
-                <font>
-                 <family>Tahoma</family>
-                 <pointsize>14</pointsize>
-                 <bold>true</bold>
-                </font>
+               <property name="frameShape">
+                <enum>QFrame::StyledPanel</enum>
                </property>
-               <property name="styleSheet">
-                <string notr="true">QLabel{
+               <property name="frameShadow">
+                <enum>QFrame::Raised</enum>
+               </property>
+               <layout class="QVBoxLayout" name="verticalLayout_8">
+                <property name="spacing">
+                 <number>6</number>
+                </property>
+                <property name="leftMargin">
+                 <number>0</number>
+                </property>
+                <property name="topMargin">
+                 <number>9</number>
+                </property>
+                <property name="rightMargin">
+                 <number>0</number>
+                </property>
+                <property name="bottomMargin">
+                 <number>0</number>
+                </property>
+                <item>
+                 <widget class="QLabel" name="label_title">
+                  <property name="minimumSize">
+                   <size>
+                    <width>0</width>
+                    <height>0</height>
+                   </size>
+                  </property>
+                  <property name="font">
+                   <font>
+                    <family>Tahoma</family>
+                    <pointsize>14</pointsize>
+                    <bold>true</bold>
+                   </font>
+                  </property>
+                  <property name="styleSheet">
+                   <string notr="true">QLabel{
 color: rgb(8, 255, 206);
 }
 QLabel:hover{
@@ -166,38 +221,38 @@ color: rgba(8, 255, 206,150);
 }
 
 </string>
-               </property>
-               <property name="text">
-                <string>RELAY BOX 4 CHANNELS</string>
-               </property>
-               <property name="alignment">
-                <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
-               </property>
-              </widget>
-             </item>
-             <item>
-              <widget class="QLabel" name="label_time">
-               <property name="minimumSize">
-                <size>
-                 <width>0</width>
-                 <height>0</height>
-                </size>
-               </property>
-               <property name="maximumSize">
-                <size>
-                 <width>300</width>
-                 <height>16777215</height>
-                </size>
-               </property>
-               <property name="font">
-                <font>
-                 <family>Microsoft JhengHei</family>
-                 <pointsize>11</pointsize>
-                 <bold>true</bold>
-                </font>
-               </property>
-               <property name="styleSheet">
-                <string notr="true">QLabel{
+                  </property>
+                  <property name="text">
+                   <string>RELAY BOX 4 CHANNELS</string>
+                  </property>
+                  <property name="alignment">
+                   <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+                  </property>
+                 </widget>
+                </item>
+                <item>
+                 <widget class="QLabel" name="label_time">
+                  <property name="minimumSize">
+                   <size>
+                    <width>0</width>
+                    <height>0</height>
+                   </size>
+                  </property>
+                  <property name="maximumSize">
+                   <size>
+                    <width>300</width>
+                    <height>16777215</height>
+                   </size>
+                  </property>
+                  <property name="font">
+                   <font>
+                    <family>Microsoft JhengHei</family>
+                    <pointsize>11</pointsize>
+                    <bold>true</bold>
+                   </font>
+                  </property>
+                  <property name="styleSheet">
+                   <string notr="true">QLabel{
 color: rgb(8, 255, 206);
 }
 QLabel:hover{
@@ -205,13 +260,16 @@ color: rgba(8, 255, 206,150);
 }
 
 </string>
-               </property>
-               <property name="text">
-                <string>TIME</string>
-               </property>
-               <property name="alignment">
-                <set>Qt::AlignCenter</set>
-               </property>
+                  </property>
+                  <property name="text">
+                   <string>TIME</string>
+                  </property>
+                  <property name="alignment">
+                   <set>Qt::AlignCenter</set>
+                  </property>
+                 </widget>
+                </item>
+               </layout>
               </widget>
              </item>
              <item>
@@ -450,7 +508,7 @@ color: rgba(8, 255, 206,150);
                   <property name="font">
                    <font>
                     <family>Verdana</family>
-                    <pointsize>14</pointsize>
+                    <pointsize>13</pointsize>
                     <bold>false</bold>
                    </font>
                   </property>
@@ -473,7 +531,7 @@ background-color: none;
                   <property name="font">
                    <font>
                     <family>Verdana</family>
-                    <pointsize>14</pointsize>
+                    <pointsize>13</pointsize>
                    </font>
                   </property>
                   <property name="autoFillBackground">
@@ -599,7 +657,7 @@ QCheckBox::indicator:unchecked{
                   <property name="font">
                    <font>
                     <family>Verdana</family>
-                    <pointsize>14</pointsize>
+                    <pointsize>13</pointsize>
                     <bold>false</bold>
                    </font>
                   </property>
@@ -622,7 +680,7 @@ background-color: none;
                   <property name="font">
                    <font>
                     <family>Verdana</family>
-                    <pointsize>14</pointsize>
+                    <pointsize>13</pointsize>
                    </font>
                   </property>
                   <property name="autoFillBackground">
@@ -748,7 +806,7 @@ QCheckBox::indicator:unchecked{
                   <property name="font">
                    <font>
                     <family>Verdana</family>
-                    <pointsize>14</pointsize>
+                    <pointsize>13</pointsize>
                     <bold>false</bold>
                    </font>
                   </property>
@@ -771,7 +829,7 @@ background-color: none;
                   <property name="font">
                    <font>
                     <family>Verdana</family>
-                    <pointsize>14</pointsize>
+                    <pointsize>13</pointsize>
                    </font>
                   </property>
                   <property name="autoFillBackground">
@@ -897,7 +955,7 @@ QCheckBox::indicator:unchecked{
                   <property name="font">
                    <font>
                     <family>Verdana</family>
-                    <pointsize>14</pointsize>
+                    <pointsize>13</pointsize>
                     <bold>false</bold>
                    </font>
                   </property>
@@ -920,7 +978,8 @@ background-color: none;
                   <property name="font">
                    <font>
                     <family>Verdana</family>
-                    <pointsize>14</pointsize>
+                    <pointsize>13</pointsize>
+                    <kerning>true</kerning>
                    </font>
                   </property>
                   <property name="autoFillBackground">
@@ -1000,23 +1059,39 @@ QCheckBox::indicator:unchecked{
               <number>0</number>
              </property>
              <property name="leftMargin">
-              <number>0</number>
+              <number>9</number>
              </property>
              <property name="topMargin">
               <number>0</number>
              </property>
              <property name="rightMargin">
-              <number>0</number>
+              <number>9</number>
              </property>
              <property name="bottomMargin">
               <number>0</number>
              </property>
+             <item>
+              <widget class="QLabel" name="label">
+               <property name="styleSheet">
+                <string notr="true">color: rgb(255,54,18);</string>
+               </property>
+               <property name="text">
+                <string/>
+               </property>
+              </widget>
+             </item>
              <item>
               <widget class="QLabel" name="label_credit">
                <property name="minimumSize">
                 <size>
                  <width>0</width>
                  <height>0</height>
+                </size>
+               </property>
+               <property name="maximumSize">
+                <size>
+                 <width>150</width>
+                 <height>16777215</height>
                 </size>
                </property>
                <property name="font">
@@ -1031,7 +1106,7 @@ QCheckBox::indicator:unchecked{
                 <string notr="true">color: rgba(7, 0, 86, 120);</string>
                </property>
                <property name="text">
-                <string>#v21.01  #tht5hc  </string>
+                <string>#v21.01  #tht5hc </string>
                </property>
                <property name="alignment">
                 <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
